Configuración para el despliegue